Backend's 1st Part is Completed

--- a/.env
+++ b/.env
@@ -1,7 +1,5 @@
 PORT=3000
-username = 12prince3456singh
-password = xCtul7cPn1sx2BKz
-MONGO_DB_URI= mongodb+srv://12prince3456singh:xCtul7cPn1sx2BKz@cluster0.kakn3hc.mongodb.net/chat-app-db
+MONGO_DB_URI=mongodb+srv://12prince3456singh:xCtul7cPn1sx2BKz@cluster0.kakn3hc.mongodb.net/chat-app-db?retryWrites=true&w=majority&appName=Cluster0
 
 JWT_SECRET=WcV9yC+Do6IG70kVfLOu1mwGNUD9ST/Z/qJfznVS22A=
 
